# Optimize-Cloud-Rendering

./: .clang-format  .gitmodules  CMakeLists.txt  README.MD
include/: Camera.h  MathHelper.h  Menu.h  Prime.h  Renderer.h  Window.h
include/Geometry/: CloudVertex.h  Mesh.h  MeshVertex.h  OptiCloudVertex.h  VkCloud.h  VkMesh.h  VkOptiCloud.h
include/Vulkan/: ComputePass.h
shaders/: cloud.frag  cloud.vert  gradient.frag  gradient.vert  mesh.frag  mesh.vert  opticloud.frag  opticloud.vert  prepare.comp  reprojectcloud.frag  reprojectcloud.vert
sources/: Camera.cpp  Menu.cpp  Prime.cpp  Renderer.cpp  Window.cpp  main.cpp
sources/Geometry/: CloudVertex.cpp  Mesh.cpp  MeshVertex.cpp  OptiCloudVertex.cpp  VkCloud.cpp  VkMesh.cpp  VkOptiCloud.cpp
sources/Vulkan/: ComputePass.cpp
